# bookpicker

./: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  scheme.sql
.github/workflows/: prod.yml
src/: bot.rs  err.rs  insights.rs  main.rs  models.rs  repository.rs  service.rs
