[package]
name = "bookclub_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12.2", features = ["macros", "webhooks-axum", "auto-send"] }
tokio = { version =  "1.28.2", features = ["rt-multi-thread", "macros"] }
nanoid = "0.4"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
log = "0.4.8"
pretty_env_logger = "0.5.0"
lazy_static = "1.4"
chrono = "0.4"
tokio-postgres = {version="0.7.8", features=["with-uuid-1", "with-chrono-0_4"]}
uuid = "1.3.4"
futures = "0.3.28"
bb8-postgres = { version = "0.8.1" }
async-trait = "0.1.68"
rand = "0.8.5"